--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,18 @@
   <meta charset="utf-8">
   <title>QuizAppFrontend</title>
   <base href="/">
+
+  <script type="module">
+    import { Buffer } from 'buffer';
+    import process from 'process';
+    window.Buffer = Buffer;
+    window.process = process;
+    window.global = window;
+  </script>
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
